Implement EntityDeathEvent listener.

--- a/src/main/resources/messages/Messages.properties
+++ b/src/main/resources/messages/Messages.properties
@@ -1,5 +1,7 @@
 skill-defender-resist-effect = "$1 has resisted $2"
 
+pvp_disabled = "Sorry! PVP is disabled!"
+
 entity-name-dropped-item = "Item"
 entity-name-experience-orb = "Experience Orb"
 entity-name-leash = "Leash Knot"
